# neuropull

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  INSTRUCTIONS.md  LICENSE  README.md  index.html  makefile  mkdocs.yml  objects.inv  pull.py  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  release.yml
api/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  installation.md  metadata.md  usage.md
docs/tutorials/: maggot_examples.ipynb
installation/: index.html
neuropull/: __Init__.py  __init__.py
neuropull/fetch/: __init__.py  witvilet2020.py
neuropull/graph/: README.md  __init__.py  adjacency.py  base.py  base_frame.py  graph.py  matrix.py  matrix_frame.py  network_frame.py  network_frame_old.py  operations.py  types.py
neuropull/load/: __init__.py  load.py
processing/scripts/: process_c_elegans.py  process_flywire.py  process_maggot_science.py  process_maggot_with_unpaired.py  process_p_pacificus.py
search/: search_index.json
tests/: __init__.py  test_neuropull.py
tutorials/maggot_examples/: index.html
usage/: index.html
