[tool]
[tool.poetry]
name = "neuropull"
version = "0.2.0"
homepage = "https://github.com/neurodata/neuropull"
description = "A lightweight tool for pulling connectome networks and metadata."
authors = ["Benjamin D. Pedigo <bpedigo@jhu.edu>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "neuropull" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.10"
# dev stuff
black  = { version = "^22.3.0", optional = true}
isort  = { version = "^5.8.0", optional = true}
flake8  = { version = "^3.9.2", optional = true}
flake8-docstrings = { version = "^1.6.0", optional = true }
mypy = {version = "^0.900", optional = true}
pytest  = { version = "^6.2.4", optional = true}
pytest-cov  = { version = "^2.12.0", optional = true}
tox  = { version = "^3.20.1", optional = true}
virtualenv  = { version = "^20.2.2", optional = true}
mkdocs  = "^1.4.2"
mkdocs-include-markdown-plugin  = "^4.0.0"
mkdocs-material  = "^8.5.11"
mkdocstrings  = { version = "^0.19.0", extras = ["python"]}
mkdocs-material-extensions  = "^1.1.1"
twine  = { version = "^3.3.0", optional = true}
mkdocs-autorefs = "^0.4.1"
pre-commit = {version = "^2.12.0", optional = true}
toml = {version = "^0.10.2", optional = true}
bump2version = {version = "^1.0.1", optional = true}
# https://github.com/mkdocs/mkdocs/issues/2799
Jinja2 = "^3.1.2"
python-catmaid = {version = "^2.1.1", optional = true}
ipykernel = {version = "^6.15.3", optional = true}
graspologic = {version = "^2.0.0", optional = true}
# real stuff
numpy = ">=1.23.0,<1.24.0"
networkx = "^2.8.6"
beartype = "^0.11.0"
scipy = "^1.9.2"
pandas = "^1.5.2"
mkdocs-jupyter = {version = "^0.22.0", optional = true}
mknotebooks = {version = "^0.7.1", optional = true}


[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs",
    "mkdocs-jupyter",
    "mknotebooks"
    ]

data = [
    "python-catmaid",
    "ipykernel",
    "graspologic"
]

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
